--- a/default/src/ckanext-dataproxy/requirements.txt
+++ b/default/src/ckanext-dataproxy/requirements.txt
@@ -2,7 +2,7 @@
 # MySQL-python==1.2.5
 
 # Uncomment if using dataproxy with Microsoft SQL Server database(s)
-# pymssql==2.1.1
+pymssql==2.1.1
 
 # The PostgreSQL driver (psycopg2) is already installed with CKAN,
 # so we do not need to require it again.
